# spotify-playlist-export

./: .env.example  .flake8  .gitignore  ASYNC_RESULT.json  README.md  SYNC_RESULT.json  async.py  auth.py  input.json  main.py  pyproject.toml  readme.md  requirements.txt  spotify.py  tests.py  utils.py
config/: save_as.py
tests/: test_input.json  test_spotify.py  tests.py
