[tool.poetry]
name = "spotify-playlist-export"
version = "0.1.0"
description = ""
authors = ["lyingtakemura <106205052+lyingtakemura@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
